; ModuleID = '/home/carl/AnghaBench/redis/src/extr_redis-cli.c_getLongInfoField.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_redis-cli.c_getLongInfoField.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LONG_MIN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i8*)* @getLongInfoField to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @getLongInfoField(i8* %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i8* @getInfoField(i8* %8, i8* %9)
  store i8* %10, i8** %6, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %15, label %13

13:                                               ; preds = %2
  %14 = load i64, i64* @LONG_MIN, align 8
  store i64 %14, i64* %3, align 8
  br label %21

15:                                               ; preds = %2
  %16 = load i8*, i8** %6, align 8
  %17 = call i64 @strtol(i8* %16, i32* null, i32 10)
  store i64 %17, i64* %7, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @zfree(i8* %18)
  %20 = load i64, i64* %7, align 8
  store i64 %20, i64* %3, align 8
  br label %21

21:                                               ; preds = %15, %13
  %22 = load i64, i64* %3, align 8
  ret i64 %22
}

declare dso_local i8* @getInfoField(i8*, i8*) #1

declare dso_local i64 @strtol(i8*, i32*, i32) #1

declare dso_local i32 @zfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
